Handle LLM timeouts and publish pipeline failures